// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroContent component Variants Respects accent variant 1`] = `
<div
  class="hero-content bg-accent text-accent-content"
>
  Hero 
  accent
</div>
`;

exports[`HeroContent component Variants Respects base-100 variant 1`] = `
<div
  class="hero-content bg-base-100 text-base-content"
>
  Hero 
  base-100
</div>
`;

exports[`HeroContent component Variants Respects base-200 variant 1`] = `
<div
  class="hero-content bg-base-200 text-base-content"
>
  Hero 
  base-200
</div>
`;

exports[`HeroContent component Variants Respects base-300 variant 1`] = `
<div
  class="hero-content bg-base-300 text-base-content"
>
  Hero 
  base-300
</div>
`;

exports[`HeroContent component Variants Respects error variant 1`] = `
<div
  class="hero-content bg-error text-error-content"
>
  Hero 
  error
</div>
`;

exports[`HeroContent component Variants Respects error variant 2`] = `
<div
  class="hero-content bg-error text-error-content"
>
  Hero 
  error
</div>
`;

exports[`HeroContent component Variants Respects info variant 1`] = `
<div
  class="hero-content bg-info text-info-content"
>
  Hero 
  info
</div>
`;

exports[`HeroContent component Variants Respects info variant 2`] = `
<div
  class="hero-content bg-info text-info-content"
>
  Hero 
  info
</div>
`;

exports[`HeroContent component Variants Respects neutral variant 1`] = `
<div
  class="hero-content bg-neutral text-neutral-content"
>
  Hero 
  neutral
</div>
`;

exports[`HeroContent component Variants Respects primary variant 1`] = `
<div
  class="hero-content bg-primary text-primary-content"
>
  Hero 
  primary
</div>
`;

exports[`HeroContent component Variants Respects secondary variant 1`] = `
<div
  class="hero-content bg-secondary text-secondary-content"
>
  Hero 
  secondary
</div>
`;

exports[`HeroContent component Variants Respects success variant 1`] = `
<div
  class="hero-content bg-success text-success-content"
>
  Hero 
  success
</div>
`;

exports[`HeroContent component Variants Respects success variant 2`] = `
<div
  class="hero-content bg-success text-success-content"
>
  Hero 
  success
</div>
`;

exports[`HeroContent component Variants Respects warning variant 1`] = `
<div
  class="hero-content bg-warning text-warning-content"
>
  Hero 
  warning
</div>
`;

exports[`HeroContent component Variants Respects warning variant 2`] = `
<div
  class="hero-content bg-warning text-warning-content"
>
  Hero 
  warning
</div>
`;
